--- a/1905.05636/lav.tex
+++ b/1905.05636/lav.tex
@@ -2,10 +2,15 @@
 % John C. Baez and Christian Williams
 % 2019/9/5 - second arXiv version
 
-\documentclass{amsart}
-\usepackage{geometry}
+\documentclass[11pt]{amsart}
 \usepackage{amsmath}
 \usepackage{amssymb}
+
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.1}
+\usepackage[papersize={7in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\raggedbottom
+
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage{amsthm}
@@ -136,7 +141,7 @@ for Operational Semantics \\}
   \vspace{0.3cm}   
   {\small email:  baez@math.ucr.edu, cwill041@math.ucr.edu\\} 
   \vspace{0.3cm}   
-  {\small \today}
+  {\small 14 May 2019}
   \vspace{0.3cm}   
 \end{center} 
 
@@ -184,12 +189,13 @@ Simplicial sets allow one to generalize rewriting to \emph{higher-dimensional} r
 \end{itemize}
 
 We thus obtain a spectrum of cartesian closed categories $\V$ to enrich over, each connected to the next by a product-preserving functor, which allow us to examine the computation of term calculi in various ways: \\
+{\small
 \[\begin{array}{lll}
 \textbf{Simplicial Sets} & \sSet \text{-theories represent ``small-step'' operational semantics:} \\ & \text{--- an edge is a \textit{single} term rewrite.}\\
 \textbf{Categories} & \Cat\text{-theories represent ``big-step'' operational semantics:} \\  & \text{(Often this means a rewrite to a normal form. We use the term more generally.)}\\ & \text{--- a morphism is a \textit{finite sequence} of rewrites.}\\
     \textbf{Posets} & \Pos \text{-theories represent ``full-step'' operational semantics:}\\ & \text{--- a boolean is the \textit{existence} of a big-step rewrite.}\\
 \textbf{Sets} & \Set \text{-theories represent denotational semantics:} \\ & \text{--- an element is a \textit{connected component} of the rewrite relation.} 
-\end{array}\]
+\end{array}\]}
 
 In Section \ref{sec:lawvere} we review Lawvere theories as a more explicit, but equivalent, presentation of finitary monads. In Section \ref{sec:enrichment}, we recall the basics of enrichment over cartesian closed categories.   In Section \ref{sec:enriched_lawvere} we give the central definition of $\V$-theory, adapted from the work of Lucyshyn-Wright \cite{lucyshyn-wright}, which allows us to apply his theorem relating enriched Lawvere theories and monads.  In Section \ref{sec:arities} we prove some lemmas required for the main result of the previous section: a $\V$-theory $\T$ gives a monadic adjunction between $\V$ and the $\V$-category of models of $\T$ in $\V$.  This generalizes a fundamental result for Lawvere theories.
 
@@ -313,7 +319,7 @@ $$\Kl(T)^{\op}(n,m) = \Kl(T)(m,n) = \Set(m,T(n))$$
 where the latter is considered as $m$ $n$-ary operations in the Lawvere theory $k_T$.
 When $T$ is finitary, the monad arising from this Lawvere theory is naturally isomorphic to $T$ itself.
 
-This correspondence sets up an equivalence between the category $\Law$ of Lawvere theories and the category of finitary monads on $\Set$.  There is also an equivalence between the category $\Mod(\T,\Set)$ of models of a Lawvere theory $\T$ and the category of algebras of the corresponding finitary monad $T$.  Furthermore, all this generalizes with $\Set$ replaced by any ``locally finitely presentable'' category \cite{adamekrosicky}. For more details see \cite{barrwells,lawvere,milewski}.\\
+This correspondence sets up an equivalence between the category $\Law$ of Lawvere theories and the category of finitary monads on $\Set$.  There is also an equivalence between the category $\Mod(\T,\Set)$ of models of a Lawvere theory $\T$ and the category of algebras of the corresponding finitary monad $T$.  Furthermore, all this generalizes with $\Set$ replaced by any ``locally finitely presentable'' category \cite{adamekrosicky}. For more details see \cite{barrwells,lawvere,milewski}.
 
 One final point, provided to us by Mike Stay: while monads are often associated with functional programming languages such as Haskell, Lawvere theories correspond to \emph{interfaces} or abstract classes in object-oriented programming. In these one declares various constants, types, and abstract functions satisfying tests, and then one implements the interface by assigning these elements, sets, functions, and equations---precisely a model in $\Set$. While people think of monads as the main example of ``categories in programming'', in fact Lawvere theories are ubiquitous.
 
@@ -403,7 +409,11 @@ As with $\V$-products, it is useful to repackage the isomorphism of Eq.\ \eqref{
 \[     q \maps 1_\V \to  \C(c^v,c)^v , \]
 namely the composite
 \[ 1_\V \stackrel{id_{c^v}}{\longrightarrow}  \C(c^v,c^v) \stackrel{\sim}{\longrightarrow} \C(c^v,c)^v .\]
-Conversely, any element $q \maps 1_\V \to  \C(c^v,c)^v$ determines a $\V$-natural transformation $e\maps C(-,c^v) \to C(-,c)^v$, and we say $e$ is a \textbf{universal cone} if this $\V$-natural transformation is an isomorphism.  Next, suppose $\C$ and $\D$ are $\V$-categories with $v$-powers.  We say a $\V$-functor $F\maps \C\to \D$ \textbf{preserves $v$-powers} if it maps universal cones to universal cones.
+Conversely, any element $q \maps 1_\V \to  \C(c^v,c)^v$ determines a $\V$-natural transformation 
+
+$$e \maps C(-,c^v)  \to C(-,c)^v$$,
+
+and we say $e$ is a \textbf{universal cone} if this $\V$-natural transformation is an isomorphism.  Next, suppose $\C$ and $\D$ are $\V$-categories with $v$-powers.  We say a $\V$-functor $F\maps \C\to \D$ \textbf{preserves $v$-powers} if it maps universal cones to universal cones.
 
 There are just a few more technicalities. A category is \textbf{locally finitely presentable} if it is the category of models for a finite limits theory, and an object is \define{finite} if its representable functor is \define{finitary}: that is, it preserves filtered colimits \cite{adamekrosicky}.   A $\V$-category $\C$ is \textbf{locally finitely presentable} if its underlying category $\C_0$ is locally finitely presentable, $\C$ has finite powers, and $(-)^x\maps \C_0 \to \C_0$ is finitary for all finitely presentable $x$.  The details are not crucial here: all categories to be considered are locally finitely presentable. We will use  $\V_f$ to denote the full subcategory of $\V$ of finite objects: in $\sSet$, these are simplicial sets with finitely many $n$-simplices for each $n$.
 
@@ -537,11 +547,34 @@ When $\V = \Cat$, a $\V$-category is a 2-category, so a $\V$-theory deserves to 
 	\textbf{equations}
           \end{array}\]
 
-        \[\begin{tikzcd}
-          M^4 \ar[rr,"1\times 1\times m"] \ar[dr,"1\times m\times 1" description, ""name=a1] \ar[dd, "m\times 1\times 1",swap,""name=b1] && M^3 \ar[dr, "1\times m",""name=a2] \arrow[Rightarrow,"1\times \alpha",from=a1,to=a2,shorten >=1.3cm,shorten <=1.3cm] &&& M^4 \ar[rr, "1\times 1\times m"] \ar[dd,"m\times 1\times 1",swap,""name=d1] && M^3 \ar[dd,"m\times 1" description,""name=d2] \ar[dr,"1\times m"] %\arrow[,"",from=d1,to=d2,shorten >=1.3cm,shorten <=1.3cm] 
+        \[\begin{tikzcd}[column sep=2em]
+          M^4 \ar[rr,"1\times 1\times m"] 
+               \ar[dr,"1\times m\times 1" description, ""name=a1] 
+               \ar[dd, "m\times 1\times 1",swap,""name=b1] 
+          && M^3 \ar[dr, "1\times m",""name=a2] 
+               \arrow[Rightarrow,"1\times \alpha",from=a1,to=a2,shorten >=0.7cm,shorten <=0.7cm]
+          &&& M^4 
+              \ar[rr, "1\times 1\times m"] 
+              \ar[dd,"m\times 1\times 1",swap,""name=d1] 
+          && M^3 \ar[dd,"m\times 1" description,""name=d2] \ar[dr,"1\times m"] 
           & \\
-          & M^3 \ar[rr,"1\times m"] \ar[dd,"m\times 1",""name=b2] \arrow[Rightarrow,"\alpha\times 1",from=b1,to=b2,shorten >=0.7cm,shorten <=0.7cm] && M^2 \ar[dd,"m",""name=c1] & = & &&& M^2 \ar[dd,"m",""name=f1] \arrow[Rightarrow,"\alpha",from=d2,to=f1,shorten >=0.6cm,shorten <=0.6cm] \arrow[Rightarrow,"\alpha",from=b2,to=c1,shorten >=1.3cm,shorten <=1.3cm] \\
-          M^3 \ar[dr,"m\times 1",swap] &&& && M^3 \ar[rr,"1\times m"] \ar[dr,"m\times 1",swap,,""name=e1] && M^2 \ar[dr,"m",,""name=e2] \arrow[Rightarrow,"\alpha",from=e1,to=e2,shorten >=1.3cm,shorten <=1.3cm] & \\
+          & M^3 
+             \ar[rr,"1\times m"] 
+             \ar[dd,"m\times 1",""name=b2] 
+             \arrow[Rightarrow,"\alpha\times 1",from=b1,to=b2,shorten >=0.3cm,shorten <=0.3cm] 
+          && M^2 \ar[dd,"m",""name=c1] 
+          & = & &&& M^2 
+             \ar[dd,"m",""name=f1] 
+             \arrow[Rightarrow,"\alpha",from=d2,to=f1,shorten >=0.4cm,shorten <=0.4cm]
+             \arrow[Rightarrow,"\alpha",from=b2,to=c1,shorten >=1cm,shorten <=1cm] \\
+          M^3 
+             \ar[dr,"m\times 1",swap] 
+          &&& && M^3 
+             \ar[rr,"1\times m"] 
+             \ar[dr,"m\times 1",swap,,""name=e1] 
+          && M^2 \ar[dr,"m",,""name=e2] 
+             \arrow[Rightarrow,"\alpha",from=e1,to=e2,shorten >=1cm,shorten <=1cm] 
+          & \\
           & M^2 \ar[rr,"m",swap] && M && & M^2 \ar[rr,"m",swap] && M
         \end{tikzcd}\]
 
