--- a/quant-ph-9801041/quant-ph-9801041.tex
+++ b/quant-ph-9801041/quant-ph-9801041.tex
@@ -1,10 +1,45 @@
 %% This document created by Scientific Word (R) Version 3.0
 
-\documentclass{article}
+\documentclass[12pt]{article}
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[noBBpl,sc]{mathpazo}
+\usepackage{eulervm}
+
+\linespread{1.1}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/fix-underbrace.tex}
+
+%\usepackage[small]{titlesec}
+%\usepackage[dotinlabels]{titletoc}
+%\titlelabel{{\thetitle}.\quad}
+%\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 %TCIDATA{OutputFilter=latex2.dll}
 %TCIDATA{CSTFile=LaTeX article (bright).cst}
 %TCIDATA{LastRevised=Tue Jan 20 14:33:26 1998}
@@ -78,22 +113,22 @@ physical phenomena expands, the theoretical limits to the power of computing
 machines may grow accordingly. Recently, it has been shown that quantum
 computers can in theory exploit quantum phenomena to perform tasks that
 classical computers apparently cannot, such as factoring large numbers in
-polynomial time\cite{Shor}, searching databases of size $M$ in time $\sqrt{M}$
+polynomial time \cite{Shor}, searching databases of size $M$ in time $\sqrt{M}$
 \cite{Grover}, or simulating the detailed behavior of other quantum systems in
 less than exponential time and space \cite{Feynman}\cite{Lloyd}\cite{Abrams}.
 The realization that quantum mechanics could be used to build a fundamentally
 more powerful type of computing machine has led to a huge amount of recent
 activity in the field of quantum computation; for a review, see
-Ekert\cite{Ekert} or DiVincenzo\cite{DiVincenzo}.
+Ekert \cite{Ekert} or DiVincenzo \cite{DiVincenzo}.
 
 It has been suggested \cite{Weinberg}\cite{Weinberg 2}\cite{Fivel}\cite{Levy}
 \cite{Bertolami} that under some circumstances the superposition principle of
 quantum mechanics might be violated - that is, that the time evolution of
 quantum systems might be (slightly) nonlinear. Such nonlinearity is purely
 hypothetical: all known experiments confirm the linearity of quantum mechanics
-to a high degree of accuracy\cite{Majumder}\cite{Walsworth}\cite{Chupp}%
+to a high degree of accuracy \cite{Majumder}\cite{Walsworth}\cite{Chupp}%
 \cite{Bollinger}. Further, nonlinear quantum theories have often been
-controversial and frequently have had theoretical difficulties\cite{Peres}
+controversial and frequently have had theoretical difficulties \cite{Peres}
 \cite{Polchinski}\cite{Gisin}. Nevertheless, the implications of nonlinear
 quantum mechanics on the theory of computation are profound. In particular, we
 show that it is generally possible to exploit nonlinear time evolution so that
@@ -112,14 +147,14 @@ salesman, satisfiability, and sub-graph isomorphism, for which no known
 polynomial time algorithms exist. We phrase our algorithm in terms of an
 oracle (or ``black box''), which calculates a function that maps n bits into a
 single bit (i.e., it takes an input between 0 and $2^{n}-1$ and returns either
-0 or 1). We need to determine if there exists an input value x for which f(x)
-= 1; with a polynomial time algorithm to solve this problem, it is easy to
+0 or 1). We need to determine if there exists an input value $x$ for which $f(x)
+= 1$; with a polynomial time algorithm to solve this problem, it is easy to
 solve all problems in the class NP. Indeed, this oracle problem is in fact a
 harder problem than those in NP, because it clearly requires exponential time
 on a classical Turing machine.
 
 A simple algorithm that solves the NP oracle problem can be thought of as an
-extension of Grover's data-base search algorithm\cite{Grover} to a nonlinear
+extension of Grover's data-base search algorithm \cite{Grover} to a nonlinear
 regime. Suppose that it is possible to perform a nonlinear operation on a
 single qubit that has a positive Lyapunov exponent over some (not
 exponentially small) region: i.e., somewhere on the unit sphere there exists a
@@ -137,85 +172,23 @@ to obtain the state%
 \psi=\frac{1}{\sqrt{2^{n}}}\sum\limits_{i=0}^{2^{n}-1}|i,0\rangle
 \end{equation}
 
-Step 2. Use the oracle (only once) to calculate f(i):%
+Step 2. Use the oracle (only once) to calculate $f(i)$:%
 
 \begin{equation}
 \psi=\frac{1}{\sqrt{2^{n}}}\sum\limits_{i=0}^{2^{n}-1}|i,f(i)\rangle
 \end{equation}
 
 Step 3. Reverse the $\pi/2$ rotation on each of the first n qubits. Each
-state
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-i%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-then maps into a superposition over all possible
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-i%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-, with amplitude $\pm\frac{1}{\sqrt{2^{n}}}$. In particular, each state
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-i%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-contributes $+\frac{1}{\sqrt{2^{n}}}$of its amplitude to the state
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-00...0%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-, for a total contribution of amplitude $\frac{1}{2^{n}}$ from each
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-i%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-. At least $\frac{1}{2}2^{n}$ of these states correspond to a particular value
+state $\vert i \rangle$ then maps into a superposition over all possible
+$\vert i \rangle$, with amplitude $\pm\frac{1}{\sqrt{2^{n}}}$. In particular, each state
+$\vert i \rangle$ contributes $+\frac{1}{\sqrt{2^{n}}}$of its amplitude to the state
+$\vert i \rangle$, for a total contribution of amplitude $\frac{1}{2^{n}}$ from each
+$\vert i \rangle$. At least $\frac{1}{2}2^{n}$ of these states correspond to a particular value
 of f(i)=a, and thus the state
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-00....0,a%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
+$\vert i \rangle$
 has amplitude at least 1/2. A measurement on the first n qubits will therefore
 yield the state
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-00...0%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
+$\vert i \rangle$
 with probability at least 1/4. The system will then be in the state%
 
 \begin{equation}
@@ -227,21 +200,7 @@ with probability at least 1/4. The system will then be in the state%
 where s is the number of solutions i for which f(i)=1.\ The last qubit now
 contains all the information that we need; however, for small s, a measurement
 of the last qubit will almost always return
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-0%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-, yielding no information. We wish to distinguish between the cases s=0 and s%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-0.
+$\vert i \rangle$, yielding no information. We wish to distinguish between the cases $s=0$ and $s<0$.
 
 Step 4. Repeatedly apply the nonlinear operation to drive the states
 representing these two cases apart at an exponential rate:\ eventually, at a
@@ -309,19 +268,10 @@ normalization constants):%
 
 (At the start of the computation, most of the superposition will be in the
 third state, because the flag qubit is
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-1%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
+$\vert i \rangle$
 in at most only 1 of the $2^{n}$ components.) A distinctly nonlinear
 transformation ``N'' is then applied to these two qubits (we show below how
-virtually any deterministic nonlinear operator can be recast into this form):%
-
+virtually any deterministic nonlinear operator can be recast into this form):
 \begin{align}
 &  (a)\;\;|00\rangle+|11\rangle\longrightarrow|01\rangle+|11\rangle\nonumber\\
 &  (b)\;\;|01\rangle+|10\rangle\longrightarrow|01\rangle+|11\rangle\\
@@ -330,127 +280,45 @@ virtually any deterministic nonlinear operator can be recast into this form):%
 
 This transformation is like an AND\ gate - it ignores the index qubit and
 places the flag qubit in the state
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-1%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
+$\vert i \rangle$
 if and only if either of the original components had the state
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-1%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-for the flag qubit.\footnote{There is one subtlety regarding nonlinear quantum
+$\vert i \rangle$ for the flag qubit.\footnote{There is one subtlety regarding nonlinear quantum
 mechanics which we should address here. When the superposition principle is
 abandoned, it is not immediately clear how entangled qubits will evolve. We
 follow the Weinberg model, in which the time evolution for a joint system
 composed of two subsystems is specified in terms of a preferred basis of
 vectors for the tensor product Hilbert space. For the purpose of using the
 nonlinear dynamics to perform quantum logic, we specify the joint dynamics in
-terms of the basis \{%
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-b%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-\}=\{%
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-0...00%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-,
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-0...01%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-, . . . ,
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-1..11%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-\} for each subsystem. The Weinberg prescription is as follows: write the
+terms of the basis $\{\vert b \rangle\} = \{ \vert 0..00\rangle, \vert 0..01\rangle, \dots ,\vert 0..11\rangle\}$
+for each subsystem. The Weinberg prescription is as follows: write the
 joint state for the system $\left|  \Psi\right\rangle _{12}$ as $\sum
 \limits_{b}\alpha_{b}\left|  b\right\rangle _{1}\left|  \psi_{b}\right\rangle
 _{2}$ and then act on each $\left|  \psi_{b}\right\rangle _{2}$ independently
-with the nonlinear transformation N.}
+with the nonlinear transformation $N$.}
 
-Step 4. The previous step is then repeated using each of the first n qubits as
-the index (and the remaining n-1 qubits to define the $2^{n-1}$ subspaces).
+Step 4. The previous step is then repeated using each of the first $n$ qubits as
+the index (and the remaining $n-1$ qubits to define the $2^{n-1}$ subspaces).
 After each iteration, the number of components in the superposition that have
 a
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-1%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
+$\vert 1 \rangle$
 for the flag qubit doubles. After n iterations, the flag qubit is no longer
 entangled with the first n qubits: it is either in the state
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-1%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-for every component of the superposition or the state
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-0%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-for every component of the superposition.
+$\vert 1 \rangle$ for every component of the superposition or the state
+$\vert 0 \rangle$ for every component of the superposition.
 
 Step 5. Measure the flag qubit to determine the solution.
 
 Thus, if one can perform the two qubit nonlinear transformation N one can find
 the answer to an NP-complete problem with certainty in polynomial (in fact
 linear) time, and using only a single evaluation of the oracle. It may be
-objected that the nonlinear operator N appears arbitrary and unnatural:
+objected that the nonlinear operator $N$ appears arbitrary and unnatural:
 indeed, it was selected exactly so as to be able to solve the stated problem.
 However, the apparently arbitrary operation N can be built using ordinary
 unitary operations and much simpler and more `natural' single qubit nonlinear
 operators (that is, to the extent that any nonlinear operation in quantum
 mechanics can be considered `natural'). One possible technique for generating
 the transformation would be to use the following steps: first, act on the two
-qubits with the unitary operator%
+qubits with the unitary operator
 
 \begin{equation}
 \frac{1}{\sqrt{2}}\left[
@@ -478,36 +346,11 @@ This transforms the states above as follows%
 
 Next, operate on the second qubit with a simple one qubit nonlinear gate
 $\widehat{n}_{-}$ that maps both
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-0%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
+$\vert 0 \rangle$
 and
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-1%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
+$\vert 1 \rangle$
 to the state
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-0%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-. Thus%
+$\vert 0 \rangle$. Thus%
 
 \begin{align}
 &  (a)\;\frac{1}{\sqrt{2}}\left[  |00\rangle+|11\rangle\right]
@@ -519,78 +362,11 @@ $>$%
 \end{align}
 
 The third final state is unknown because we have not bothered to specify how
-the non-linear gate acts on the state
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-00%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-+
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-01%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
--
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-10%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-+
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-11%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-. This omission thereby allows for flexibility in choosing the gate
-$\widehat{n}_{-}$. Whatever the state
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-A%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
+the non-linear gate acts on the state $\vert 00 \rangle + \vert 01 \rangle + \vert 10 \rangle + \vert 11 \rangle$. This omission thereby allows for flexibility in choosing the gate
+$\widehat{n}_{-}$. Whatever the state $\vert A \rangle$
 may be, we can perform a unitary operation that will transform the first qubit
-into the pure state
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-0%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-while leaving the state
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-00%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
+into the pure state $\vert 0 \rangle$
+while leaving the state $\vert 00 \rangle$
 in place. The computer is then in one of the following states%
 
 \begin{align}
@@ -600,49 +376,11 @@ in place. The computer is then in one of the following states%
 \end{align}
 
 A second non-linear gate $\widehat{n}_{+}$ is now required that will map the
-state x%
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-0%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-+ y%
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-1%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-to the state
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-1%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-(for the particular values of x and y which result from the above steps but
-not necessarily for arbitrary x and y), while leaving the state
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-0%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
+state $x \vert 0 \rangle + y \vert 1 \rangle$%
+to the state $\vert 1 \rangle$ (for the particular values of x and y which result from the above steps but
+not necessarily for arbitrary $x$ and $y$), while leaving the state $\vert 0 \rangle$
 unchanged. After this gate is applied, the transformation resulting from the
-steps described so far is then:%
+steps described so far is then:
 
 \begin{align}
 &  (a)\;\frac{1}{\sqrt{2}}\left[  |00\rangle+|11\rangle\right]
@@ -675,7 +413,7 @@ detail how these gates can be obtained using the model of nonlinear quantum
 mechanics put forth by Weinberg.
 
 In Weinberg's model, the ``Hamiltonian'' is a real homogeneous non-bilinear
-function $h(\psi,\psi^{*})$ of degree one, that is\cite{Weinberg 2}%
+function $h(\psi,\psi^{*})$ of degree one, that is \cite{Weinberg 2}%
 
 \begin{equation}
 \psi_{k}\frac{\partial h}{\partial\psi_{k}}=\psi_{k}^{*}\frac{\partial
@@ -742,11 +480,11 @@ $h=n\overline{h}(a)$. Thus%
 \longrightarrow\gamma\cos(\phi)|0\rangle+\delta\sin(\phi)|1\rangle
 \end{align}
 
-where $\alpha,\beta,\gamma$ and $\delta$ are phase factors. Because the
+where $\alpha$, $\beta$, $\gamma$ and $\delta$ are phase factors. Because the
 initial amplitudes of the basis states are different in the two cases, the
 nonlinear Hamiltonian will cause the components to evolve at different
 frequencies. As long as these frequencies are incommensurate, there is a time
-t at which $\alpha$=$\gamma$=$\delta$=1 and $\beta$=-1 (to within an accuracy
+t at which $\alpha=\gamma=\delta=1$ and $\beta=-1$ (to within an accuracy
 $\varepsilon$). (Further, this time t is a polynomial function of the desired
 accuracy $\varepsilon$.) The net result of these two steps is then
 \begin{align}
@@ -763,37 +501,9 @@ Step 3. Reverse the first step. Thus
 Essentially, we have reduced the angle between the two states by an amount
 2$\phi.$ By suitable repetition of this procedure (that is, by choosing $\phi$
 appropriately for each iteration), or simply by choosing $\phi$ precisely in
-the first step, the states
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-0%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-and
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-1%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-can be mapped to within $\varepsilon$ of the state
-%TCIMACRO{\TEXTsymbol{\vert}}%
-%BeginExpansion
-$\vert$%
-%EndExpansion
-0%
-%TCIMACRO{\TEXTsymbol{>}}%
-%BeginExpansion
-$>$%
-%EndExpansion
-, in an amount of time which is a polynomial function of the desired accuracy.
+the first step, the states $\vert 0 \rangle$ and $\vert 1 \rangle$
+can be mapped to within $\varepsilon$ of the state $\vert 1 \rangle$, 
+in an amount of time which is a polynomial function of the desired accuracy.
 This is the desired behavior for the nonlinear gate $\widehat{n}_{-}$. The
 procedure can be modified slightly to increase the angle between state vectors
 and produce the desired behavior for the gate $\widehat{n}_{+}$. We have thus
