--- a/quant-ph-9801041/quant-ph-9801041.tex
+++ b/quant-ph-9801041/quant-ph-9801041.tex
@@ -28,6 +28,7 @@ bookmarksopenlevel=10
 \usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
 \tolerance=2000
 \hbadness=2000
+\raggedbottom
 
 % these include amsmath and that can cause trouble in older docs.
 \input{../helpers/fix-underbrace.tex}
@@ -133,8 +134,8 @@ controversial and frequently have had theoretical difficulties \cite{Peres}
 quantum mechanics on the theory of computation are profound. In particular, we
 show that it is generally possible to exploit nonlinear time evolution so that
 the classes of problems NP and \#P\ (including oracle problems) may be solved
-in polynomial time. An experimental question - that is, the exact linearity of
-quantum mechanics - could thereby determine the answer to what may have
+in polynomial time. An experimental question --- that is, the exact linearity of
+quantum mechanics --- could thereby determine the answer to what may have
 previously appeared to be a purely mathematical one. This paper therefore
 establishes a new link between physical law and the theoretical power of
 computing machines.
@@ -145,7 +146,7 @@ solution. These include all problems in the class P\ (those that can be solved
 in polynomial time) as well as the NP-complete problems, e.g., the traveling
 salesman, satisfiability, and sub-graph isomorphism, for which no known
 polynomial time algorithms exist. We phrase our algorithm in terms of an
-oracle (or ``black box''), which calculates a function that maps n bits into a
+oracle (or ``black box''), which calculates a function that maps $n$ bits into a
 single bit (i.e., it takes an input between 0 and $2^{n}-1$ and returns either
 0 or 1). We need to determine if there exists an input value $x$ for which $f(x)
 = 1$; with a polynomial time algorithm to solve this problem, it is easy to
@@ -165,20 +166,23 @@ behavior to solve NP problems if we begin with an ordinary quantum computer
 (i.e., one that can perform the usual quantum logic operations such as
 controlled rotation gates) and use the algorithm described below:
 
-Step 1. Begin by performing a $\pi/2$ rotation on each of the first n qubits
+\medskip\noindent
+{\it Step 1}. Begin by performing a $\pi/2$ rotation on each of the first $n$ qubits
 to obtain the state%
 
 \begin{equation}
 \psi=\frac{1}{\sqrt{2^{n}}}\sum\limits_{i=0}^{2^{n}-1}|i,0\rangle
 \end{equation}
 
-Step 2. Use the oracle (only once) to calculate $f(i)$:%
+\medskip\noindent
+{\it Step 2}. Use the oracle (only once) to calculate $f(i)$:%
 
 \begin{equation}
 \psi=\frac{1}{\sqrt{2^{n}}}\sum\limits_{i=0}^{2^{n}-1}|i,f(i)\rangle
 \end{equation}
 
-Step 3. Reverse the $\pi/2$ rotation on each of the first n qubits. Each
+\medskip\noindent
+{\it Step 3.} Reverse the $\pi/2$ rotation on each of the first $n$ qubits. Each
 state $\vert i \rangle$ then maps into a superposition over all possible
 $\vert i \rangle$, with amplitude $\pm\frac{1}{\sqrt{2^{n}}}$. In particular, each state
 $\vert i \rangle$ contributes $+\frac{1}{\sqrt{2^{n}}}$of its amplitude to the state
@@ -201,18 +205,22 @@ contains all the information that we need; however, for small $s$, a measurement
 of the last qubit will almost always return $\vert i \rangle$, yielding no information. 
 We wish to distinguish between the cases $s=0$ and $s<0$.
 
-Step 4. Repeatedly apply the nonlinear operation to drive the states
+\medskip\noindent
+{\it Step 4}. Repeatedly apply the nonlinear operation to drive the states
 representing these two cases apart at an exponential rate: eventually, at a
 time determined by a polynomial function of the number of qubits n, the number
 of solutions $s$, and the rate of spreading (Lyapunov exponent) $\lambda$, the
 two cases will become macroscopically distinguishable.
 
-Step 5. Make a measurement on the last qubit to determine the solution. If the
+\medskip\noindent
+{\it Step 5}. Make a measurement on the last qubit to determine the solution. If the
 angular extent of the nonlinear region is small, it may be necessary to repeat
 the algorithm several times in order to determine the solution with high
 probability. In general, the algorithm will require $O((\pi/\eta)^{2})$
 trials, where $\eta$ is the angular extent of the nonlinear region. If $\eta$
 is sufficiently large, the oracle may need to be called only once.
+
+\medskip
 
 To solve problems in the class \#P, we need to determine the exact number of
 solutions $s$. This is approximately found by counting the number of times that
@@ -235,14 +243,16 @@ conceptually divide the qubits into $n$ input qubits (representing the input,
 an integer between $0$ and $2^{n}-1$ ) and one flag qubit. In order to solve the
 stated oracle problem, we use the following algorithm:
 
-Step 1. We begin by performing a $\pi/2$ rotation on each of the first n
+\medskip\noindent
+{\it Step 1}. We begin by performing a $\pi/2$ rotation on each of the first n
 qubits to obtain the state%
 
 \begin{equation}
 \psi=\frac{1}{\sqrt{2^{n}}}\sum\limits_{i=0}^{2^{n}-1}|i,0\rangle
 \end{equation}
 
-Step 2. Use the first $N$ qubits as the input to the oracle and store the output
+\medskip\noindent
+{\it Step 2}. Use the first $N$ qubits as the input to the oracle and store the output
 in the\ (N+1)$^{st}$ qubit (the flag qubit). (Note that this is the only time
 that the algorithm needs to call the oracle; hence, we require only $1$
 evaluation of the function.) The system is now in the state%
@@ -251,9 +261,10 @@ evaluation of the function.) The system is now in the state%
 \psi=\frac{1}{\sqrt{2^{n}}}\sum\limits_{i=0}^{2^{n}-1}|i,f(i)\rangle
 \end{equation}
 
-Step 3. Consider the first qubit separately, and group all the states of the
+\medskip\noindent
+{\it Step 3}. Consider the first qubit separately, and group all the states of the
 superposition into pairs based on the value of qubits $2..n$. That is, the
-qubits 2..n define $2^{n-1}$ subspaces of dimension $4 = \text{(2 dimensions for
+qubits $2..n$ define $2^{n-1}$ subspaces of dimension $4 = \text{(2 dimensions for
 qubit 1)} * \text{(2 dimensions for the flag qubit)}$. Within each subspace, the
 computer will be in one of the following states (where we write the value of
 the first qubit followed by the value of the flag qubit, and ignore the
@@ -275,8 +286,8 @@ virtually any deterministic nonlinear operator can be recast into this form):
 &  (a)\;\;|00\rangle+|11\rangle\longrightarrow|01\rangle+|11\rangle\nonumber\\
 &  (b)\;\;|01\rangle+|10\rangle\longrightarrow|01\rangle+|11\rangle\\
 &  (c)\;\;|00\rangle+|10\rangle\longrightarrow|00\rangle+|10\rangle\nonumber
-\end{align}
-
+\end{align}\goodbreak
+\noindent
 This transformation is like an AND\ gate - it ignores the index qubit and
 places the flag qubit in the state
 $\vert i \rangle$
@@ -295,19 +306,22 @@ joint state for the system $\left|  \Psi\right\rangle _{12}$ as $\sum
 _{2}$ and then act on each $\left|  \psi_{b}\right\rangle _{2}$ independently
 with the nonlinear transformation $N$.}
 
-Step 4. The previous step is then repeated using each of the first $n$ qubits as
+\medskip\noindent
+{\it Step 4}. The previous step is then repeated using each of the first $n$ qubits as
 the index (and the remaining $n-1$ qubits to define the $2^{n-1}$ subspaces).
 After each iteration, the number of components in the superposition that have
 a
 $\vert 1 \rangle$
-for the flag qubit doubles. After n iterations, the flag qubit is no longer
-entangled with the first n qubits: it is either in the state
+for the flag qubit doubles. After $n$ iterations, the flag qubit is no longer
+entangled with the first $n$ qubits: it is either in the state
 $\vert 1 \rangle$ for every component of the superposition or the state
 $\vert 0 \rangle$ for every component of the superposition.
 
-Step 5. Measure the flag qubit to determine the solution.
+\medskip\noindent
+{\it Step 5}. Measure the flag qubit to determine the solution.
 
-Thus, if one can perform the two qubit nonlinear transformation N one can find
+\medskip\noindent
+Thus, if one can perform the two qubit nonlinear transformation $N$ one can find
 the answer to an NP-complete problem with certainty in polynomial (in fact
 linear) time, and using only a single evaluation of the oracle. It may be
 objected that the nonlinear operator $N$ appears arbitrary and unnatural:
@@ -321,16 +335,16 @@ qubits with the unitary operator
 
 \begin{equation}
 \frac{1}{\sqrt{2}}\left[
-\begin{array}
-[c]{llll}%
-1 & 0 & 0 & 1\\
-0 & 1 & 1 & 0\\
-0 & 1 & -1 & 0\\
-1 & 0 & 0 & -1
-\end{array}
+\begin{matrix}
+1 & \phantom{-}0 & \phantom{-}0 & \phantom{-}1\\
+0 & \phantom{-}1 & \phantom{-}1 & \phantom{-}0\\
+0 & \phantom{-}1 & -1 & \phantom{-}0\\
+1 & \phantom{-}0 & \phantom{-}0 &-1
+\end{matrix}
 \right]
 \end{equation}
 
+\goodbreak
 This transforms the states above as follows%
 
 \begin{align}
@@ -376,7 +390,7 @@ in place. The computer is then in one of the following states%
 
 A second non-linear gate $\widehat{n}_{+}$ is now required that will map the
 state $x \vert 0 \rangle + y \vert 1 \rangle$%
-to the state $\vert 1 \rangle$ (for the particular values of x and y which result from the above steps but
+to the state $\vert 1 \rangle$ (for the particular values of $x$ and $y$ which result from the above steps but
 not necessarily for arbitrary $x$ and $y$), while leaving the state $\vert 0 \rangle$
 unchanged. After this gate is applied, the transformation resulting from the
 steps described so far is then:
@@ -390,7 +404,7 @@ steps described so far is then:
 \longrightarrow|01\rangle\nonumber
 \end{align}
 
-The two qubit transformation N is then easily obtained with a NOT gate on the
+The two qubit transformation $n$ is then easily obtained with a NOT gate on the
 second qubit and a $\pi/2$ rotation on the first qubit.\ 
 
 Having thus shown how to generate N, the question is now reduced to that of
@@ -461,7 +475,8 @@ point rotates at a rate which depends upon its angle $\theta$ from the axis
 (clearly, this transformation involves stretching of the surface). One can
 exploit this stretching of the sphere to build the gate $\widehat{n}_{-}$ as follows:
 
-Step 1. Perform a rotation on the first qubit by an angle $\phi<45{{}^{\circ}}
+\medskip\noindent
+{\it Step 1}. Perform a rotation on the first qubit by an angle $\phi<45{{}^{\circ}}
 $:%
 
 \begin{align}
@@ -469,7 +484,8 @@ $:%
 |1\rangle &  \longrightarrow\sin(\phi)|0\rangle+\cos(\phi)|1\rangle
 \end{align}
 
-Step 2. Time-evolve the system according to the nonlinear Hamiltonian
+\medskip\noindent
+{\it Step 2}. Time-evolve the system according to the nonlinear Hamiltonian
 $h=n\overline{h}(a)$. Thus%
 
 \begin{align}
@@ -491,7 +507,8 @@ accuracy $\varepsilon$.) The net result of these two steps is then
 |1\rangle &  \longrightarrow\sin(\phi)|0\rangle+\cos(\phi)|1\rangle
 \end{align}
 
-Step 3. Reverse the first step. Thus
+\medskip\noindent
+{\it Step 3}. Reverse the first step. Thus
 \begin{align}
 |0\rangle &  \longrightarrow\cos(2\phi)|0\rangle+\sin(2\phi)|1\rangle\\
 |1\rangle &  \longrightarrow|1\rangle
