--- a/quant-ph-9801041/quant-ph-9801041.tex
+++ b/quant-ph-9801041/quant-ph-9801041.tex
@@ -224,12 +224,12 @@ is sufficiently large, the oracle may need to be called only once.
 
 To solve problems in the class \#P, we need to determine the exact number of
 solutions $s$. This is approximately found by counting the number of times that
-the nonlinear operator was applied. To determine s exactly, one proceeds with
+the nonlinear operator was applied. To determine $s$ exactly, one proceeds with
 finer and finer estimates by rotating the final qubit such that the current
 best estimate is centered in the nonlinear region; in this way, applying the
 nonlinear operator separates states with $s$ near this value so that they are
 distinguishable. With only a polynomial number of iterations, one determines
-the value s exactly. The previous algorithm can therefore by used to solve
+the value $s$ exactly. The previous algorithm can therefore by used to solve
 arbitrary problems (including oracle probems) in the class \#P\ as well.
 
 The above algorithm has one disadvantage in that it requires exponential
