--- a/quant-ph-9801041/quant-ph-9801041.tex
+++ b/quant-ph-9801041/quant-ph-9801041.tex
@@ -244,7 +244,7 @@ an integer between $0$ and $2^{n}-1$ ) and one flag qubit. In order to solve the
 stated oracle problem, we use the following algorithm:
 
 \medskip\noindent
-{\it Step 1}. We begin by performing a $\pi/2$ rotation on each of the first n
+{\it Step 1}. We begin by performing a $\pi/2$ rotation on each of the first $n$
 qubits to obtain the state%
 
 \begin{equation}
@@ -252,8 +252,8 @@ qubits to obtain the state%
 \end{equation}
 
 \medskip\noindent
-{\it Step 2}. Use the first $N$ qubits as the input to the oracle and store the output
-in the\ (N+1)$^{st}$ qubit (the flag qubit). (Note that this is the only time
+{\it Step 2}. Use the first $n$ qubits as the input to the oracle and store the output
+in the\ $(n+1)^{st}$ qubit (the flag qubit). (Note that this is the only time
 that the algorithm needs to call the oracle; hence, we require only $1$
 evaluation of the function.) The system is now in the state%
 
