--- a/quant-ph-0101012v4/5axv4.tex
+++ b/quant-ph-0101012v4/5axv4.tex
@@ -1,7 +1,43 @@
 
 
-\documentclass[10pt,twocolumn]{article}
+\documentclass[12pt]{article}
 %\documentclass[12pt]{article}
+
+%\usepackage{amsmath,amsthm,amscd,amssymb}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
+\usepackage[sc,osf]{mathpazo}
+\linespread{1.05}
+
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\raggedbottom
+
+% these include amsmath and that can cause trouble in older docs.
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+
+\usepackage[small]{titlesec}
+\usepackage[dotinlabels]{titletoc}
+\titlelabel{{\thetitle}.\quad}
+\input{../helpers/psu-plain-titles.tex}
+%\input{../helpers/psu-sc-headers.tex}
+%\input{../helpers/revtex-12-fix.tex}
+%\DeclareSymbolFont{CMlargesymbols}{OMX}{cmex}{m}{n}
+%\DeclareMathSymbol{\sum}{\mathop}{CMlargesymbols}{"50}
 
 \usepackage{amsmath}
 \usepackage{amssymb}
@@ -25,7 +61,7 @@
 \textit{Centre for Quantum Computation,}\\
 \textit{The Clarendon Laboratory,}\\
 \textit{Parks road, Oxford OX1 3PU, UK}}
-
+\date{25 Sep 2001}
 \begin{document}
 
 \maketitle
@@ -197,7 +233,7 @@ to consider (see Fig.~1).  An experimentalist has three types of device.
 One is a preparation device.  We can think of it as preparing physical
 systems in some state.
 \begin{figure*}[t]
-%\resizebox{\textwidth}{!}
+\resizebox{\textwidth}{!}
 {\includegraphics{qaxiomf1.eps}}
 \caption{The situation considered consists of a preparation device with
 a knob for varying the state of the system produced and a release button
