--- a/quant-ph-0104088/FinalFinal.tex
+++ b/quant-ph-0104088/FinalFinal.tex
@@ -4,16 +4,41 @@
 %CAF version 04--04--01 (Ode to the Monolith)
 %RS version 01--4--1 (April Fools' Day)
 
-\documentstyle[aps,preprint,eqsecnum,epsf]{revtex}
+\documentclass[12pt,aps,eqsecnum]{revtex4-1}
+\usepackage[colorlinks=true
+,breaklinks=true
+,urlcolor=blue
+,anchorcolor=blue
+,citecolor=blue
+,filecolor=blue
+,linkcolor=blue
+,menucolor=blue
+,linktocpage=true]{hyperref}
+\hypersetup{
+bookmarksopen=true,
+bookmarksnumbered=true,
+bookmarksopenlevel=10
+}
 
-\tightenlines
+\usepackage{epsfig}
+%\usepackage{cfr-lm}
+\usepackage[noBBpl,sc]{mathpazo}
+\linespread{1.05}
+\usepackage[papersize={6.9in, 10.0in}, left=.5in, right=.5in, top=1in, bottom=.9in]{geometry}
+\tolerance=2000
+\hbadness=2000
+\pagestyle{plain}
+\raggedbottom
 
+\input{../helpers/mnsymbol.tex}
+\input{../helpers/fix-underbrace.tex}
+\input{../helpers/revtex-12-fix.tex}
 \newcommand{\bq}{\begin{quotation}\noindent}
 \newcommand{\eq}{\end{quotation}\medskip}
 
 %\def\mat#1#2#3#4{\left(\begin{array}{cc}{#1}&{#2}\\%
 %{#3}&{#4}\end{array}\right)}
-\def\mat#1#2#3#4{\left(\matrix{{#1}&{#2}\cr {#3}&{#4}}\right)}
+\def\mat#1#2#3#4{\left(\begin{matrix}{#1}&{#2}\\ {#3}&{#4}\end{matrix}\right)}
 \def\tr{{\rm tr}}
 
 \def\vec#1{{\bf #1}}
@@ -43,8 +68,6 @@ Egham, Surrey TW20$\;$0EX, UK}
 
 \date{17 March 2001}
 
-\maketitle
-
 \begin{abstract}
 We present an elementary proof of the {\it quantum de Finetti
 representation theorem}, a quantum analogue of de Finetti's
@@ -67,6 +90,7 @@ demonstrate that the theorem fails for real Hilbert spaces and
 discuss the significance of this point.
 \end{abstract}
 
+\maketitle
 
 \section{Introduction} \label{sec-intro}
 
@@ -157,7 +181,6 @@ information collected by a demon and used by it to extract work from
 heat has a thermodynamic cost at least as large as the work extracted
 \cite{Landauer1961}.
 
-\begin{center}
 \begin{figure} \leavevmode
 \epsfxsize=8cm \epsfbox{fig1.eps} \bigskip\caption{What can the term
 ``unknown state'' mean if quantum states are taken exclusively to be
@@ -167,7 +190,6 @@ observer whose state of knowledge is symbolized by some
 $|\psi\rangle$, and it is the identity of the symbol that we are
 ignorant of?}
 \end{figure}
-\end{center}
 
 The example analyzed in detail in this paper provides another case.
 Along the way, it brings to light a new and distinct point about why
@@ -207,14 +229,12 @@ quantum-state tomography is the second strategy listed above---to
 banish completely the idea of the unknown state from the formulation
 of tomography.
 
-\begin{center}
 \begin{figure} \leavevmode
 \epsfxsize=9cm \epsfbox{fig2.eps} \bigskip\caption{To make sense of
 quantum tomography, must we go to the extreme of imagining a ``man
 in the box'' who has a better description of the systems than we
 do?  How contrived our usage would be if that were so!}
 \end{figure}
-\end{center}
 
 To do this, we take a cue from the field of Bayesian probability
 theory~\cite{Kyburg1980,JaynesPosthumous,Bernardo1994}, prompted
@@ -294,7 +314,10 @@ where
 \begin{equation}
 \rho^{\otimes N}=
 \underbrace{\rho\otimes\rho\otimes\cdots\otimes\rho}_{
-\matrix{\mbox{$N$-fold tensor}\cr\mbox{product}}}
+\begin{matrix}
+\text{$N$-fold tensor} \\
+\text{product}
+\end{matrix}}
 \end{equation}
 and $P(\rho)$ is a fixed probability distribution over the density
 operators.
@@ -865,15 +888,15 @@ the marginal density operator for $N$ systems is $\rho^{(N)}$, i.e.,
 \end{equation}
 where the trace is taken over the additional $M$ systems.  In
 explicit basis-dependent notation, this requirement is
-\begin{equation}
+\begin{multline}
 \rho^{(N)}=
 \!\!\sum_{i_1,\ldots,i_N;j_1,\ldots,j_N}
-\!\!\left(\,\sum_{i_{N+1},\ldots,i_{N+M}}\!\!
+\!\!\Big(\,\sum_{i_{N+1},\ldots,i_{N+M}}\!\!
 R^{(N+M)}_{i_1,\ldots,i_N,i_{N+1},\ldots,i_{N+M};
-j_1,\ldots,j_N,i_{N+1},\ldots,i_{N+M}}\right)\!
+j_1,\ldots,j_N,i_{N+1},\ldots,i_{N+M}}\Big)\! \\
 |i_1\rangle\cdots|i_N\rangle \langle j_1| \cdots\langle j_N|\;.
-\end{equation}
-In analogy to the classical case, an exchangeable density operator can
+\end{multline}
+In multline to the classical case, an exchangeable density operator can
 be thought of informally as the description of a subsystem of an
 infinite sequence of systems whose order is irrelevant.
 
