--- a/quant-ph-9801041/quant-ph-9801041.tex
+++ b/quant-ph-9801041/quant-ph-9801041.tex
@@ -5,6 +5,7 @@
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amssymb}
+\usepackage{cite}
 
 %\usepackage{amsmath,amsthm,amscd,amssymb}
 \usepackage[colorlinks=true
@@ -116,21 +117,20 @@ computers can in theory exploit quantum phenomena to perform tasks that
 classical computers apparently cannot, such as factoring large numbers in
 polynomial time \cite{Shor}, searching databases of size $M$ in time $\sqrt{M}$
 \cite{Grover}, or simulating the detailed behavior of other quantum systems in
-less than exponential time and space \cite{Feynman}\cite{Lloyd}\cite{Abrams}.
+less than exponential time and space \cite{Feynman,Lloyd,Abrams}.
 The realization that quantum mechanics could be used to build a fundamentally
 more powerful type of computing machine has led to a huge amount of recent
 activity in the field of quantum computation; for a review, see
 Ekert \cite{Ekert} or DiVincenzo \cite{DiVincenzo}.
 
-It has been suggested \cite{Weinberg}\cite{Weinberg 2}\cite{Fivel}\cite{Levy}
-\cite{Bertolami} that under some circumstances the superposition principle of
+It has been suggested \cite{Weinberg,Weinberg 2,Fivel,Levy,Bertolami} 
+that under some circumstances the superposition principle of
 quantum mechanics might be violated - that is, that the time evolution of
 quantum systems might be (slightly) nonlinear. Such nonlinearity is purely
 hypothetical: all known experiments confirm the linearity of quantum mechanics
-to a high degree of accuracy \cite{Majumder}\cite{Walsworth}\cite{Chupp}%
-\cite{Bollinger}. Further, nonlinear quantum theories have often been
-controversial and frequently have had theoretical difficulties \cite{Peres}
-\cite{Polchinski}\cite{Gisin}. Nevertheless, the implications of nonlinear
+to a high degree of accuracy \cite{Majumder,Walsworth,Chupp,Bollinger}. Further, nonlinear quantum theories have often been
+controversial and frequently have had theoretical difficulties \cite{Peres,Polchinski,Gisin}.
+Nevertheless, the implications of nonlinear
 quantum mechanics on the theory of computation are profound. In particular, we
 show that it is generally possible to exploit nonlinear time evolution so that
 the classes of problems NP and \#P\ (including oracle problems) may be solved
